--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Changes for EPublisher::Source::Plugin::MetaCPAN
 ================================================
 
-0.1 2012-01-20
-    initial release
+0.1 2012-03-19
+    + initial release
 
