--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@ Changes for EPublisher::Source::Plugin::MetaCPAN
 0.11 2012-04-02
     - fixed a bug in POD detection. (POD without "=head" is ignored)
     - take possible comments in MANIFEST into account
+    - look for POD in rootdir of project (not only in ./lib)
 
 0.1  2012-03-19
     - initial release
