--- a/Changes
+++ b/Changes
@@ -4,7 +4,7 @@ Changes for EPublisher::Source::Plugin::MetaCPAN
 0.11 2012-04-02
     - fixed a bug in POD detection. (POD without "=head" is ignored)
     - take possible comments in MANIFEST into account
-    - look for POD in rootdir of project (not only in ./lib)
+    - tweaked Regex for finding POD (looking everywhere but example/ and t/)
 
 0.1  2012-03-19
     - initial release
