--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Changes for EPublisher::Source::Plugin::MetaCPAN
 ================================================
 
+0.21 2012-11-30
+    - added POD encoding due to testfail on CpanTesters
+
 0.20 2012-06-14
     - corrected small typo
 
